--- a/package.json
+++ b/package.json
@@ -10,8 +10,19 @@
     "test": "jest"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
+    "@notifee/react-native": "^9.1.2",
+    "@react-native-firebase/app": "^21.3.0",
+    "@react-native-firebase/auth": "^21.3.0",
+    "@react-native-firebase/firestore": "^21.3.0",
+    "@react-native-firebase/messaging": "^21.3.0",
+    "@reduxjs/toolkit": "^2.3.0",
+    "nativewind": "^4.1.23",
     "react": "18.3.1",
-    "react-native": "0.76.1"
+    "react-hook-form": "^7.53.1",
+    "react-native": "0.76.1",
+    "react-redux": "^9.1.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -31,6 +42,7 @@
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "18.3.1",
+    "tailwindcss": "^3.4.14",
     "typescript": "5.0.4"
   },
   "engines": {
