--- a/package.json
+++ b/package.json
@@ -16,11 +16,23 @@
     "@react-native-firebase/auth": "^21.3.0",
     "@react-native-firebase/firestore": "^21.3.0",
     "@react-native-firebase/messaging": "^21.3.0",
+    "@react-navigation/bottom-tabs": "^7.0.0",
+    "@react-navigation/drawer": "^7.0.1",
+    "@react-navigation/native": "^7.0.0",
+    "@react-navigation/stack": "^7.0.0",
     "@reduxjs/toolkit": "^2.3.0",
+    "@types/react-native-vector-icons": "^6.4.18",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-hook-form": "^7.53.1",
     "react-native": "0.76.1",
+    "react-native-gesture-handler": "^2.20.2",
+    "react-native-mmkv": "^3.1.0",
+    "react-native-reanimated": "^3.16.1",
+    "react-native-safe-area-context": "^4.14.0",
+    "react-native-screens": "^4.0.0",
+    "react-native-svg": "^15.8.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.1.2",
     "zod": "^3.23.8"
   },
@@ -42,7 +54,6 @@
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "18.3.1",
-    "tailwindcss": "^3.4.14",
     "typescript": "5.0.4"
   },
   "engines": {
